# Amr_robot

./: CMakeLists.txt  README.md  package.xml
config/: drive_bot.rviz
description/: robot.urdf.xacro
launch/: launch_sim.launch.py  rsp.launch.py
